--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -5,11 +5,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 
 <body>
-    <h1>Shrimp Tacos</h1>
+    <h1>Beef Tacos</h1>
+    <img src="images/beeftaco.jpg" alt="Image of beef tacos on a plate with beans and rice" width="500" height="400">
 </body>
 
 </html>
