--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -9,8 +9,28 @@
 </head>
 
 <body>
-    <h1>Beef Tacos</h1>
+    <h1>Ground Beef Tacos</h1>
+
     <img src="images/beeftaco.jpg" alt="Image of beef tacos on a plate with beans and rice" width="500" height="400">
+
+    <h2>Description</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+ 
+    <h2>Ingredients</h2>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
+
 </body>
 
 </html>
