Add images to cookie.html and ribeye.html

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -11,6 +11,8 @@
 <body>
    <h1>Odin Recipes</h1> 
    <a href="taco.html">Ground Beef Tacos</a>
+   <a href="ribeye.html">Ribeye Steak</a>
+   <a href="cookie.html">Chocolate Chip Cookies</a>
 </body>
 
 </html>
