Reformat Nav links to unordered list

--- a/recipes/index.html
+++ b/recipes/index.html
@@ -10,9 +10,11 @@
 
 <body>
    <h1>Odin Recipes</h1> 
-   <a href="taco.html">Ground Beef Tacos</a>
-   <a href="ribeye.html">Ribeye Steak</a>
-   <a href="cookie.html">Chocolate Chip Cookies</a>
+   <ul>
+     <li><a href="taco.html">Ground Beef Tacos</a></li>
+     <li><a href="ribeye.html">Ribeye Steak</a></li>
+     <li><a href="cookie.html">Chocolate Chip Cookies</a></li>
+   </ul>
 </body>
 
 </html>
