Add ingrediants and steps section

--- a/recipes/cookie.html
+++ b/recipes/cookie.html
@@ -15,20 +15,31 @@
 
     <h2>Description</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
  
     <h2>Ingredients</h2>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Cake Flour</li>
+        <li>Break Flour</li>
+        <li>Baking Soda</li>
+        <li>Baking Powder</li>
+        <li>Course Salt</li>
+        <li>Unsalted Butter</li>
+        <li>Light Brown sugar</li>
+        <li>Granulated Sugar</li>
+        <li>Large Eggs</li>
+        <li>Vanilla Extract</li>
+        <li>Bittersweet Choclate Disks</li>
     </ul>
 
     <h2>Steps</h2>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
     </ol>
 
 </body>
