--- a/recipes/ribeye.html
+++ b/recipes/ribeye.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Ribeye Steak</h1>
+    <h1>Rib Eye Steak</h1>
 
     <img src="images/ribeye.jpg" alt="Image of Ribeye Steak in a Cast Iron Skillet" width="400" height="550">
 
@@ -19,16 +19,22 @@
  
     <h2>Ingredients</h2>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Bone in Rib Eye Steaks </li>
+        <li>Kosher Salt</li>
+        <li>Ground Pepper</li>
+        <li>Canola Oil</li>
+        <li>Unsalted Butter</li>
+        <li>Thyme Sprigs</li>
+        <li>Garlic Cloves</li>
+        <li>Rosemary Sprigs</li>
     </ul>
 
     <h2>Steps</h2>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
     </ol>
 
 </body>
