--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -19,16 +19,26 @@
  
     <h2>Ingredients</h2>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Pepper</li>
+        <li>Salt</li>
+        <li>Cumin</li>
+        <li>Onion Powder</li>
+        <li>Chili Powder</li>
+        <li>Tomato Sauce</li>
+        <li>Ground Beef</li>
+        <li>Oil</li>
+        <li>Butter</li>
+        <li>Corn Tortillas</li>
     </ul>
 
     <h2>Steps</h2>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</li>
+        <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </li>
     </ol>
 
 </body>
